@@ -1,1 +1,1 @@
-unclosed_verb_line_commands.texi:3: @verb missing close brace
+unclosed_verb_line_commands.texi:3: @verb missing closing delimiter sequence: s}
